# src/main/java/com/focuskeeper/reboot/recovery/planning/dto/TimeboxPayloadRequest.java
@@ -4,8 +4,8 @@ import jakarta.validation.constraints.NotBlank;
 
 //  start / end / type 받는거
 public record TimeboxPayloadRequest(
-        @NotBlank(message = "itemId는 비어 있을 수 없습니다.")
-        String itemId,
+        @NotBlank(message = "executionUnitId는 비어 있을 수 없습니다.")
+        String executionUnitId,
         @NotBlank(message = "startAt은 비어 있을 수 없습니다.")
         String startAt,
         @NotBlank(message = "endAt은 비어 있을 수 없습니다.")
