# src/main/java/com/focuskeeper/reboot/recovery/planning/dto/TimeboxResponse.java
@@ -4,7 +4,7 @@ package com.focuskeeper.reboot.recovery.planning.dto;
 // timebox에 대한 응답 보내주는거
 public record TimeboxResponse(
         String timeboxId,
-        String itemId,
+        String executionUnitId,
         String content,
         String startAt,
         String endAt,
